Fixed: Overflow issue with widgets in edit mode

--- a/www/comps/widgets.css
+++ b/www/comps/widgets.css
@@ -27,6 +27,7 @@
 }
 .widgets-content.editMode{
 	padding:20px;
+	align-items:flex-start;
 	border:4px dotted var(--color-border);
 	border-radius:5px;
 	overflow:auto;
